trying to fix IE box shadow spacing issue. adding other colors

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1032,7 +1032,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $blue;
-					border-bottom: 1 px solid $blue;
+					outline: 1px solid $blue;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1045,7 +1047,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $turquoise;
-					border-bottom: 1 px solid $turquoise;
+					outline: 1px solid $turquoise;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1058,7 +1062,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $olive;
-					border-bottom: 1 px solid $olive;
+					outline: 1px solid $olive;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1071,7 +1077,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $orange;
-					border-bottom: 1 px solid $orange;
+					outline: 1px solid $orange;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1099,7 +1107,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $tan;
-					border-bottom: 1 px solid $tan;
+					outline: 1px solid $tan;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}
@@ -1112,7 +1122,9 @@ content: "";
 	    	&:hover {
 				.field--type-image:after {
 					box-shadow: inset 0 0 0 10px $lime;
-					border-bottom: 1 px solid $lime;
+					outline: 1px solid $lime;
+    				margin-left: 1px;
+    				width: calc(100% - 2px);
 				}
 			}
 		}		
